version/0.12/_sources/api/solver/_autosummary/settings/color_map.rst.txt
:orphan:

.. _color_map:

color_map
=========

.. currentmodule:: ansys.fluent.core.solver.settings_231.color_map

.. autoclass:: color_map
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

======================================   ===========================

Child                                                        Summary

======================================   ===========================
:ref:`visible <visible>`                            'visible' child.

:ref:`size <size>`                                     'size' child.

:ref:`color <color>`                                  'color' child.

:ref:`log_scale <log_scale>`                      'log_scale' child.

:ref:`format <format>`                               'format' child.

:ref:`user_skip <user_skip>`                      'user_skip' child.

:ref:`show_all <show_all>`                         'show_all' child.

:ref:`position <position>`                         'position' child.

:ref:`font_name <font_name>`                      'font_name' child.

:ref:`font_automatic <font_automatic>`       'font_automatic' child.

:ref:`font_size <font_size>`                      'font_size' child.

:ref:`length <length_1>`                             'length' child.

:ref:`width <width>`                                  'width' child.

======================================   ===========================

.. rubric:: Included in:

==================================================   ==========================================

Parent                                                                                  Summary

==================================================   ==========================================
:ref:`contour_child <contour_child>`                            'child_object_type' of contour.

:ref:`vector_child <vector_child>`                               'child_object_type' of vector.

:ref:`pathline_child <pathline_child>`                         'child_object_type' of pathline.

:ref:`particle_track_child <particle_track_child>`       'child_object_type' of particle_track.

:ref:`lic_child <lic_child>`                                        'child_object_type' of lic.

==================================================   ==========================================

